--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Raphael Musoke
+# This file lists all contributors to the repository.
+Amandine Irakoze <a.irakoze@alustudent.com>
+Raphael Musoke <r.musoke@alustudent.com>
